# OPS-Mind

./: .dockerignore  .flake8  .gitignore  ADK_DEPLOYMENT.md  CHANGELOG.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  Makefile  README.md  README_ADK_DEPLOYMENT.md  callback_logging.py  cloud-run-service.yaml  deploy.sh  docker-compose.yml  env.template  pyproject.toml  requirements.txt  setup-gcp.sh  test_opsmind.py  upload-datasets.sh
.github/workflows/: ci.yml
opsmind/: __init__.py  agent.py
opsmind/config/: __init__.py  settings.py
opsmind/context/: __init__.py  interface.py  manager.py  retrieval.py
opsmind/core/: __init__.py  agent.py  agents.py
opsmind/core/agents/: __init__.py  guardrails.py  listener.py  listener_agent.py  pipeline.py  pipeline_agent.py  root.py  root_agent.py  search.py  synthesizer.py  synthesizer_agent.py  writer.py  writer_agent.py
opsmind/core/safety/: __init__.py  agent.py  framework.py  tools.py
opsmind/data/: __init__.py  loader.py  manager.py
opsmind/data/connectors/: __init__.py  base.py  connector_manager.py  jira.py  jira_connector.py  manager.py
opsmind/data/datasets/incidents/: incident_event_log.csv
opsmind/data/datasets/jira/: changelog.csv  comments.csv  issuelinks.csv  issues.csv
opsmind/docs/: README.md
opsmind/examples/: basic_usage.py
opsmind/tests/: __init__.py  test_opsmind.py
opsmind/tools/: __init__.py  context.py  context_tools.py  guardrail.py  guardrail_tools.py  incident_tools.py  incidents.py  knowledge.py  postmortem_tools.py  postmortems.py  realtime.py
opsmind/utils/: __init__.py  data_helpers.py  gcp_storage.py  logging.py
output/: postmortem_INC0000063_20250701_152859.md  postmortem_INC0000071_20250701_155820.md
